# Studio-Inventory-CLI

./: Read_Order_Details.py  main.py  pyproject.toml  read_mcmaster_invoice.py  read_mcmaster_invoice_2.py  read_mcmaster_invoice_3.py  read_mcmaster_invoice_4.py  readme.md
art_studio_org/: Read_Line_Items.py.bak  cli.py  cli.py.bak  db.py  ingest_all.py  ingest_all.py.bak  main.py  main.py.bak
art_studio_org/labels/: make_pdf.py  make_pdf.py.bak  presets.py
art_studio_org/vendors/: mcmaster_api.py  registry.py  stepperonline.py
label_templates/: avery_5160.json  avery_94102.json.bak  avery_94270.json
not_in_use/: read_mcmaster_invoice.py  read_mcmaster_invoice_2.py  read_mcmaster_invoice_3.py  read_mcmaster_invoice_4.py
secrets/: mcmaster.env
src/studio_inventory/: cli.py  cli.py.bak  dates.py  db.py  ingest_all.py  ingest_all.py.bak  main.py  main.py.bak  paths.py
src/studio_inventory/label_templates/: avery_94102.json
vendors/: arduino.py  base.py  digikey.py  mcmaster.py  registry.py
