[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-inventory"
version = "1.1.0"
description = "Studio inventory CLI"
requires-python = ">=3.11"
dependencies = [
  "matplotlib==3.10.8",
  "numpy>=2.4.1",
  "pandas>=3.0.0",
  "pdfplumber>=0.11.9",
  "python-dotenv>=1.2.1",
  "reportlab>=4.4.9",
  "requests>=2.32.5",
  "requests-pkcs12>=1.27",
  "typer>=0.21.1",
  "rich>=10.11.0",
]

[project.scripts]
studio-inventory = "studio_inventory.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["studio_inventory*"]
exclude = ["art_studio_org*"]
