[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-inventory"
version = "1.1.0"
description = "Menu-driven CLI for studio inventory, receipt ingest, and label generation"
readme = "readme.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.21.1",
    "rich>=10.11.0",
    "pandas>=2.0",
    "pdfplumber>=0.11.9",
    "python-dateutil>=2.9",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "reportlab>=4.0.0",
]


[project.scripts]
studio-inventory = "studio_inventory.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# 🔑 SINGLE package-data table (this fixes your crash)
[tool.setuptools.package-data]
studio_inventory = [
    "label_templates/*.json",
]
